# EthoScraper

./: .gitignore  README.md  pyproject.toml
Books/: target.yaml
Books/output/: compliance.yaml  lia_analysis_report_20250721_103153.md  lia_analysis_report_20250722_111208.md  university-staff-20250721_105337.csv
Test/: target.yaml
Test/output/: compliance.yaml
src/ethoscraper/: cli.py  modelAssement.py  setup.py
src/ethoscraper/core/: analysis.py  scraper.py  setup.py
src/ethoscraper/templates/: compliance-template.yaml  target-template.yaml
