[project]
name = "ethoscraper"
version = "0.1.0"
description = "Ethical web scraper with GDPR compliance tools"
authors = [
    {name = "Maybol283",email = "126118241+Maybol283@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.13.2,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pydantic-yaml (>=1.5.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "openai (>=1.95.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[project.scripts]
ethoscraper = "ethoscraper.cli:main"
ethoscraper-setup = "ethoscraper.core.setup:main"
ethoscraper-analyze = "ethoscraper.core.analysis:main"
ethoscraper-scrape = "ethoscraper.core.scraper:main"

[tool.poetry]
packages = [{include = "ethoscraper", from = "src"}]

[tool.poetry.group.dev.dependencies]
rich = "^14.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
